--- a/templates/submenu_myaccount.tmpl
+++ b/templates/submenu_myaccount.tmpl
@@ -33,6 +33,12 @@
       </a>
     </li>
 
+    <li id="menu_myaccount_institutioncards">
+      <a href=/cgi-bin/myaccount.cgi?rm=myaccount_institutioncards_form>
+      Institution cards
+      </a>
+    </li>
+
   </ul>
 </div>
 
