Libraries can generate their own ILL graphs

--- a/templates/submenu_myaccount.tmpl
+++ b/templates/submenu_myaccount.tmpl
@@ -33,6 +33,12 @@
       </a>
     </li>
 
+    <li id="menu_myaccount_reports">
+      <a href=/cgi-bin/myaccount.cgi?rm=myaccount_reports_form>
+      Reports
+      </a>
+    </li>
+
   </ul>
 </div>
 
