--- a/templates/search/request.tmpl
+++ b/templates/search/request.tmpl
@@ -1,6 +1,25 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_search.tmpl">
 
+<script type="text/javascript">
+  function toggleLayer( whichLayer )
+  {
+    var elem, vis;
+    if( document.getElementById ) // this is the way the standards work
+      elem = document.getElementById( whichLayer );
+    else if( document.all ) // this is the way old msie versions work
+      elem = document.all[whichLayer];
+    else if( document.layers ) // this is the way nn4 works
+      elem = document.layers[whichLayer];
+
+    vis = elem.style;
+    // if the style.display value is blank we try to figure it out here
+    if(vis.display==''&&elem.offsetWidth!=undefined&&elem.offsetHeight!=undefined)
+      vis.display = (elem.offsetWidth!=0&&elem.offsetHeight!=0)?'block':'none';
+    vis.display = (vis.display==''||vis.display=='block')?'none':'block';
+  }
+</script>
+
 <div id="main">
 
   <div id="leftcontent">
@@ -8,10 +27,29 @@
 
   <div id="middlecontent">
     <form METHOD=POST ACTION="">
+      <TMPL_IF NAME=error_sendmail>
+	<br />
+	<h2>We've had a problem sending the email automatically</h2>
+	<p>Maplin has encountered a problem sending this request.</p>
+	<p>You can send this request manually by using your
+	  own email program (eg: GMail, Outlook, Hotmail, etc).</p><br />
+	<ol>
+	  <li>Create a new email to the destination library (you can copy the email address from the "To:" field, below)</li>
+	  <li>Copy the information in the "Subject:" line, below, into the subject of your new email.</li>
+	  <li>Copy everything between the "--- copy from here ---" and "--- copy to here ---" lines, and paste that into the body of your new email.</li>
+	</ol><br />
+	<p>When you send that email, the destination library will have everything they need to process your request.</p><br />
+	<hr>
+      </TMPL_IF>
+
       <p><TMPL_VAR NAME="from"></p>
       <p><TMPL_VAR NAME="to"></p>
-      <p><TMPL_VAR NAME="cc"></p>
-      <p><TMPL_VAR NAME="reply_to"></p>
+
+      <TMPL_UNLESS NAME=error_sendmail>
+	<p><TMPL_VAR NAME="cc"></p>
+	<p><TMPL_VAR NAME="reply_to"></p>
+      </TMPL_UNLESS>
+
       <p><TMPL_VAR NAME="subject"></p>
       <hr>
       <p><pre><TMPL_VAR NAME="content"></pre></p>
@@ -42,14 +80,22 @@
       <input type="hidden" name="callno" value="<TMPL_VAR NAME=callno>">
       <input type="hidden" name="collection" value="<TMPL_VAR NAME=collection>">
       <input type="hidden" name="pubdate" value="<TMPL_VAR NAME=pubdate>">
+
       <TMPL_IF NAME=sent>
-	<div id="email_sent">
-	  <h2>Email has been sent.</h2>
-	</div>
+	<TMPL_IF NAME=error_sendmail>
+	  <!-- anything else we want to say here? -->
 	<TMPL_ELSE>
+	  <div id="email_sent">
+	    <h2>Email has been sent.</h2>
+	  </div>
+	</TMPL_IF>
+
+      <TMPL_ELSE>
+	<p><br /><p>
 	  <input type="submit" name="submit" value="Send it!">
       </TMPL_IF>
       <p><a href="?rm=results_form">Return to search results</a></p>
+
     </form>
   </div>
 
