minor updates to library ILL graphs etc

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -41,6 +41,7 @@
   </div>
   <div id="header_quick_access">
     <ul>
+      <li><a href="?rm=welcome">Home</a></li>
       <li><TMPL_VAR NAME="username"> </li>
       <li><a href="?authen_logout=1">Log out</a></li>
     </ul>
