--- a/templates/info/feeds.tmpl
+++ b/templates/info/feeds.tmpl
@@ -10,22 +10,26 @@
 <h1>Library news feeds</h1>
 
 <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fmla.mb.ca%2Fnews%2FRSS&amp;chan=y&amp;num=5&amp;date=y&amp;targ=y&amp;html=a"  type="text/javascript"></script>
-
 <noscript>
 <a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fmla.mb.ca%2Fnews%2FRSS&amp;chan=y&amp;num=5&amp;date=y&amp;targ=y&amp;html=y">View RSS feed</a>
+</noscript>
+
+<br />
+<script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fwww.collectionscanada.gc.ca%2Frss%2Fwhats-new%2Fwn-lac-e.rss&amp;chan=y&amp;num=5&amp;date=y&amp;targ=y&amp;html=a"  type="text/javascript"></script>
+<noscript>
+<a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fwww.collectionscanada.gc.ca%2Frss%2Fwhats-new%2Fwn-lac-e.rss&amp;chan=y&amp;num=5&amp;date=y&amp;targ=y&amp;html=y">View RSS feed</a>
+</noscript>
+
+<br />
+<script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Flisnews.org%2Frss.xml&amp;chan=y&amp;num=5&amp;date=y&amp;targ=y&amp;html=a"  type="text/javascript"></script>
+<noscript>
+<a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Flisnews.org%2Flisnews.org&amp;chan=y&amp;num=5&amp;date=y&amp;targ=y&amp;html=y">View RSS feed</a>
 </noscript>
 
 <br />
 <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Ffeeds.feedburner.com%2Fcla%2Fnews&amp;chan=y&amp;num=5&amp;date=y&amp;targ=y&amp;html=a"  type="text/javascript"></script>
 <noscript>
 <a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Ffeeds.feedburner.com%2Fcla%2Fnews&amp;chan=y&amp;num=5&amp;date=y&amp;targ=y&amp;html=y">View RSS feed</a>
-</noscript>
-
-<br />
-<script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fwww.collectionscanada.gc.ca%2Frss%2Fwhats-new%2Fwn-lac-e.rss&amp;chan=y&amp;num=5&amp;date=y&amp;targ=y&amp;html=a"  type="text/javascript"></script>
-
-<noscript>
-<a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fwww.collectionscanada.gc.ca%2Frss%2Fwhats-new%2Fwn-lac-e.rss&amp;chan=y&amp;num=5&amp;date=y&amp;targ=y&amp;html=y">View RSS feed</a>
 </noscript>
 
 
