--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -7,6 +7,16 @@
 <br />
 <p>
 <br />
+<h3>Links to Counting Opinions</h3>
+<ul>
+  <li><a href="http://mb.countingopinions.com/index.php?page_id=4">Statistics/Ready Reports</a></li>
+  <li><a href="http://mb.countingopinions.com/memberlist_details.php?l=14702">Addresses, phone numbers, and links to library web sites</a></li>
+  <li><a href="http://mb.countingopinions.com/locations.php?l=14702">Map of Manitoba Public Libraries</a></li>
+</ul>
+<br />
+<p><a href="http://elm.lib.overdrive.com/">eLibraries Manitoba</a> monthly statistics can be found at the bottom of the <a href="http://mb.countingopinions.com/index.php?page_id=4">Counting Opinions Ready Reports</a> page.
+<br />
+<br />
 <p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
 <p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
 
