--- a/templates/info/documents.tmpl
+++ b/templates/info/documents.tmpl
@@ -26,7 +26,10 @@
       <br><a href="?rm=send_pdf&doc=LibraryGovernance.pdf">Library Governance</a>
       <br><a href="?rm=send_pdf&doc=LibraryGovBrochure-Fr-web.pdf">French version</a> of the Library Governance document.
       <br>
-      <a href="?rm=send_pdf&doc=Board_Fit_-_Attract_and_retain_the_best_people_2009_03_(English).pdf">Board Fit - Attract and retain the best people (English)</a>
+      <br><a href="?rm=send_pdf&doc=Reaching_Our_Vision_Report_-_May_30_2006_English.pdf">Reaching Our Vision report (English)</a>
+      <br><a href="?rm=send_pdf&doc=Reaching_Our_Vision_Report_-_May_30_2006_French.pdf">Reaching Our Vision report (French)</a>
+      <br>
+      <br><a href="?rm=send_pdf&doc=Board_Fit_-_Attract_and_retain_the_best_people_2009_03_(English).pdf">Board Fit - Attract and retain the best people (English)</a>
       <br><a href="?rm=send_pdf&doc=Board_Fit_-_Attract_and_retain_the_best_people_2009_03_(French).pdf">Board Fit - Attract and retain the best people (French)</a>
       <br>
       <br><a href="?rm=send_pdf&doc=DRAFT_Standards_and_Guidelines.pdf">DRAFT Standards and Guidelines</a>
