Have each page set their own HTML title element, for better Google Analytics reporting

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html>
-<head><title>MAPLIN3</title>
+<head><title><TMPL_VAR name="pagetitle"></title>
 <link type="text/css" rel="stylesheet" href="/maplin3styles.1.7.css">
 <link type="text/css" rel="stylesheet" href="/feedstyles.1.1.css">
 
