show library names in CDT totals report

--- a/templates/admin/reports/CDT_totals.tmpl
+++ b/templates/admin/reports/CDT_totals.tmpl
@@ -18,7 +18,7 @@
   </tr>
   <TMPL_LOOP NAME="by_library">
     <tr>
-      <td><TMPL_VAR NAME="claimed_by"></td>
+      <td><TMPL_VAR NAME="library"></td>
       <td><TMPL_VAR NAME="count"></td>
     </tr>
   </TMPL_LOOP>
