--- a/templates/admin/reports/CDT_totals.tmpl
+++ b/templates/admin/reports/CDT_totals.tmpl
@@ -32,9 +32,23 @@
   <TMPL_LOOP NAME="by_collection">
     <tr>
       <td><TMPL_VAR NAME="collection"></td>
-      <td><TMPL_VAR NAME="claimed"></td>
-      <td>of <TMPL_VAR NAME="total"></td>
+      <td align=right><TMPL_VAR NAME="claimed"></td>
+      <td align=right><TMPL_VAR NAME="total"></td>
       <td align=right><TMPL_VAR NAME="percent"></td>
+    </tr>
+  </TMPL_LOOP>
+</table>
+<hr>
+<h3>By publication date:</h3>
+<table>
+  <tr>
+    <td>Date</td><td>Selected</td><td>Total</td>
+  </tr>
+  <TMPL_LOOP NAME="by_pubdate">
+    <tr>
+      <td><TMPL_VAR NAME="pubdate"></td>
+      <td align=right><TMPL_VAR NAME="selectedtotal"></td>
+      <td align=right><TMPL_VAR NAME="pubtotal"></td>
     </tr>
   </TMPL_LOOP>
 </table>
