result holdings sorted by net-borrower/net-lender, and getStatus now recognized connection failures properly

--- a/templates/search/results.tmpl
+++ b/templates/search/results.tmpl
@@ -155,6 +155,7 @@
 		  <em>Availability: <TMPL_VAR NAME="available"></em>
 		  <a href="?rm=request_form&zid=<TMPL_VAR NAME=zid>&id=<TMPL_VAR NAME=record_id>&loc=<TMPL_VAR NAME=location>&callno=<TMPL_VAR NAME=callno>&collection=<TMPL_VAR NAME=collection>">Request this item</a>
 	    </p>
+	    <!-- <p><TMPL_VAR NAME="sortable_nbnl"></p> -->
 	    <TMPL_IF NAME="is_net_borrower">
 	      <p class="search_results_holdings_location_netborrower">
 		[Net borrower:
