Canada post strike

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -7,6 +7,10 @@
 <br />
 <p>
 <br />
+<h3>Canada Post labour dispute</h3>
+<p><br />As a service wholly dependenton Canada Post and the Library Book Rate, PLS anticipates that interlibrary loan services between library institutions will be suspended until Canada Post service restoration.  With respect to any materials your library has received from other institutions we recommend, where feasible for both parties, borrowing systems retain these items in their possession until Canada Post services resume and we request system-wide cooperation by temporarily accommodating borrowing institutions with relaxed overdue policies on material your library currently has on loan.  Library systems with materials belonging to the public library services branch are asked to retain all resources until Canada Post service restoration.</p>
+<p><br />Public libraries are encouraged to continue to use the search and discovery features of Maplin; however, in consultation with the Executive Council of the Manitoba Librarians' Advisory Groups, the Public Library Services Branch has disabled the request functionality.  Once Canada Post services are restored the Public Library Services Branch will reactivate the request feature.  Library patron use of the public facing site of Maplin will continue; libraries are encouraged to communicate their individual policies directly to patrons with requests.</p>
+<br /><br />
 <h3>Links to Counting Opinions</h3>
 <ul>
   <li><a href="http://mb.countingopinions.com/index.php?page_id=4">Statistics/Ready Reports</a></li>
