--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -64,11 +64,13 @@
       </a>
     </li>
 
+<!-- Finished Friday, July 22nd.
     <li id="menu_zerocirc">
       <a href=/cgi-bin/zerocirc.cgi?rm=browse_form>
       Collection Development Tool
       </a>
     </li>
+-->
 
     <li id="menu_info">
       <a href=/cgi-bin/info.cgi?rm=info_contacts_form>
