Integrate pazpar2 searching

--- a/templates/submenu_search.tmpl
+++ b/templates/submenu_search.tmpl
@@ -15,6 +15,12 @@
       </a>
     </li>
 
+    <li id="menu_search_lightning">
+      <a href=/cgi-bin/lightning.cgi?rm=lightning_search_form>
+      Lightning
+      </a>
+    </li>
+
   </ul>
 </div>
 
