--- a/templates/info/documents.tmpl
+++ b/templates/info/documents.tmpl
@@ -32,7 +32,7 @@
       <br><a href="?rm=send_pdf&doc=Board_Fit_-_Attract_and_retain_the_best_people_2009_03_(English).pdf">Board Fit - Attract and retain the best people (English)</a>
       <br><a href="?rm=send_pdf&doc=Board_Fit_-_Attract_and_retain_the_best_people_2009_03_(French).pdf">Board Fit - Attract and retain the best people (French)</a>
       <br>
-      <br><a href="?rm=send_pdf&doc=DRAFT_Standards_and_Guidelines.pdf">DRAFT Standards and Guidelines</a>
+      <br><a href="?rm=send_pdf&doc=MunicpalAndRegionalPublicLibraryStandardsAndGuidelinesDraft_-_2011-03-08.pdf">MunicpalAndRegionalPublicLibraryStandardsAndGuidelinesDraft_-_2011-03-08.pdf</a>
       <br><a href="?rm=send_pdf&doc=Appendix_-_Financial_Accountability_Guidelines_for_Public_Libraries_-_revised_Jan_27_2010.pdf">Appendix - Financial Accountability Guidelines for Public Libraries</a> - revised Jan 27, 2010.
     </td>
   </tr>
