--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -139,7 +139,8 @@
    <table width="100%" border="0" cellpadding="6" cellspacing="0">
     <tr>
      <td width="250" valign="top">
-      <div id="termlist"></div>
+       <div id="stat"></div>
+       <div id="termlist"></div>
      </td>
      <td valign="top">
       <div id="ranking">
