--- a/templates/search/lightning_request.tmpl
+++ b/templates/search/lightning_request.tmpl
@@ -71,13 +71,19 @@
 	  <!-- anything else we want to say here? -->
 	<TMPL_ELSE>
 	  <div id="email_sent">
+	    <p><br /><p>
 	    <h2>Email has been sent.</h2>
 	  </div>
 	</TMPL_IF>
 
       <TMPL_ELSE>
+	<table>
+	  <tr><td><label for "patron">Patron # </label></td><td><input type="text" name="patron" size="15" maxlength="15"></td></tr>
+	  <tr><td><label for "notes">Notes </label></td><td><input type="text" name="notes" size="60" maxlength="80"></td></tr>
+	</table>
+	<br /><input type="hidden" name="send_email" value="1">
 	<p><br /><p>
-	  <input type="submit" name="submit" value="Send it!">
+	<input type="submit" name="submit" value="Place this request">
       </TMPL_IF>
 
 
