--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -51,8 +51,8 @@
 <!-- from header.tmpl -->
 <DIV id="header">
   <div id="logo">
-    <div id="logo_title">MAPLIN-3</div>
-    <div id="logo_slogan">Manitoba Public Library Z39.50 search and request</div>
+    <div id="logo_title">MAPLIN-4</div>
+    <div id="logo_slogan">Manitoba Public Libraries ILL management system</div>
   </div>
 
   <div id="header_searchbar">
