placing an ILL request

--- a/htdocs/maplin3styles.2.0.css
+++ b/htdocs/maplin3styles.2.0.css
@@ -724,7 +724,7 @@ a.continue:hover   { color:#1240AB; font-size:140%; font-weight:600; }
 }
 #csssubmenu li a
 {
-  color: #1240AB ;
+  color: #ffd073 ;
   background-color: #4671d5 ;
   border: 1px outset #bfffe4 ;
   padding: 3px ;
