remove other search options from menu

--- a/templates/submenu_search.tmpl
+++ b/templates/submenu_search.tmpl
@@ -3,6 +3,7 @@
 <!--div id="submenu" -->
 <div id="csssubmenu">
   <ul>
+<!--
     <li id="menu_search_simple_ajax">
       <a href=/cgi-bin/maplin3.cgi?rm=search_simple_ajax_form>
       Simple
@@ -14,10 +15,10 @@
       Common
       </a>
     </li>
-
+-->
     <li id="menu_search_lightning">
       <a href=/cgi-bin/lightning.cgi?rm=lightning_search_form>
-      Lightning
+      Resource Discovery
       </a>
     </li>
 
