update menu in one more place

--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -76,7 +76,7 @@
 <div id="csstabs">
   <ul>
     <li id="menu_search">
-      <a href=/cgi-bin/maplin3.cgi?rm=search_simple_ajax_form>
+      <a href=/cgi-bin/lightning.cgi?rm=lightning_search_form>
       Search
       </a>
     </li>
