--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -54,7 +54,7 @@
   <ul>
     <li id="menu_search">
       <a href=/cgi-bin/lightning.cgi?rm=lightning_search_form>
-      Search
+      Interlibrary Loan
       </a>
     </li>
 
