--- a/templates/submenu_search.tmpl
+++ b/templates/submenu_search.tmpl
@@ -3,22 +3,21 @@
 <!--div id="submenu" -->
 <div id="csssubmenu">
   <ul>
-<!--
-    <li id="menu_search_simple_ajax">
-      <a href=/cgi-bin/maplin3.cgi?rm=search_simple_ajax_form>
-      Simple
+    <li id="menu_search_lightning">
+      <a href=/cgi-bin/lightning.cgi?rm=lightning_search_form>
+      Search
       </a>
     </li>
 
-    <li id="menu_search_common">
-      <a href=/cgi-bin/maplin3.cgi?rm=search_common_form>
-      Common
+    <li id="menu_search_pull">
+      <a href=/cgi-bin/lightning.cgi?rm=pull_list>
+      Pull list
       </a>
     </li>
--->
-    <li id="menu_search_lightning">
-      <a href=/cgi-bin/lightning.cgi?rm=lightning_search_form>
-      Resource Discovery
+
+    <li id="menu_search_respond">
+      <a href=/cgi-bin/lightning.cgi?rm=respond>
+      Respond
       </a>
     </li>
 
